# Glide

./: .gitignore  Cargo.toml  LICENSE  README.md  glm-reference1.md  glm-reference2.md  modify_build.py  output.events.jsonl  output_test.events.jsonl  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  config.rs  icons.rs  main.rs  pipeline.rs  theme.rs  tray.rs  ui.rs
crates/app/src/panels/: advance_panel.rs  advanced.rs  audio.rs  audio_panel.rs  general.rs  general_panel.rs  mod.rs  recording.rs  shortcuts.rs  shortcuts_panel.rs  stubs.rs
crates/app/src/widgets/: dropdown.rs  hotkey.rs  hotkey_capture.rs  icon_button.rs  icons.rs  level.rs  mod.rs  segmented.rs  segmented_control.rs  sidebar_tabs.rs  toggle.rs  toggle_switch.rs
crates/bindgen_runner/: Cargo.toml
crates/camera/: Cargo.toml
crates/camera-core/: Cargo.toml
crates/camera-core/src/: lib.rs
crates/camera/src/: event_log.rs  lib.rs
crates/camera/src/solver/: camera.rs  mod.rs  spring.rs
crates/capture-core/: Cargo.toml
crates/capture-core/src/: lib.rs
crates/capture-linux/: Cargo.toml
crates/capture-linux/src/: audio.rs  lib.rs
crates/capture-windows/: Cargo.toml
crates/capture-windows/src/: audio.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compositor-core/: Cargo.toml
crates/compositor-core/src/: lib.rs
crates/encode/: Cargo.toml
crates/encode/src/: audio.rs  lib.rs  video.rs
crates/ffmpeg-sys-next/: Cargo.toml  build.rs
crates/ffmpeg-sys-next/src/: bindings_x86_64-pc-windows-msvc.rs
crates/input-hooks/: Cargo.toml
crates/input-hooks/src/: accessibility.rs  cursor.rs  events.rs  hook.rs  lib.rs
crates/mux/: Cargo.toml
crates/mux/src/: lib.rs
crates/otf-camera/: Cargo.toml
crates/otf-camera/src/: engine.rs  lib.rs  state_machine.rs
crates/otf-compositor/: Cargo.toml
crates/otf-compositor/src/: lib.rs
crates/otf-overlay/: Cargo.toml
crates/otf-overlay/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: compositor.rs  decode.rs  lib.rs  shader.wgsl
docs/: ARCHITECTURE.md
scripts/: setup_ffmpeg.ps1
