[workspace]
resolver = "2"
members = [
    "crates/capture-core",
    "crates/capture-windows",
    "crates/capture-linux",
    "crates/encode",
    "crates/mux",
    "crates/cli",
    "crates/camera",
    "crates/render",
    "crates/camera-core",
    "crates/compositor-core",
    "crates/input-hooks",
    "crates/otf-camera",
    "crates/otf-compositor",
    "crates/otf-overlay"
]

[patch.crates-io]
ffmpeg-sys-next = { path = "crates/ffmpeg-sys-next" }
