[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe       = "0.27"
egui         = "0.27"
tray-icon    = "0.21"
image        = { version = "0.25", default-features = false, features = ["png"] }
rfd          = "0.15"
open         = "5"
sysinfo      = "0.32"
auto-launch  = "0.5"
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
dirs         = "5"

crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
serde_json = "1.0"

capture-core = { path = "../capture-core" }
camera-core = { path = "../camera-core" }
camera = { path = "../camera" }
encode = { path = "../encode" }
mux = { path = "../mux" }
otf-compositor = { path = "../otf-compositor" }
otf-overlay = { path = "../otf-overlay" }
input-hooks = { path = "../input-hooks" }

[target.'cfg(target_os = "windows")'.dependencies]
capture-windows = { path = "../capture-windows" }

[target.'cfg(target_os = "linux")'.dependencies]
capture-linux = { path = "../capture-linux" }
