[package]
name = "capture-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
capture-core = { path = "../capture-core" }
crossbeam-channel = "0.5"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.9.0"
zbus = "4.0.0" # needed for async dbus runtime or connections
pipewire = "0.8"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
