[package]
name = "capture-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
capture-core = { path = "../capture-core" }
crossbeam-channel = "0.5"
thiserror = "1.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Threading",
]
