[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
capture-core = { path = "../capture-core" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.25"
hound = "3.5"
encode = { path = "../encode" }
mux = { path = "../mux" }
crossbeam-channel = "0.5"
sysinfo = "0.30"
camera = { path = "../camera" }
serde_json = "1.0.150"
render = { version = "0.1.0", path = "../render" }

[target.'cfg(target_os = "windows")'.dependencies]
capture-windows = { path = "../capture-windows" }

[target.'cfg(target_os = "linux")'.dependencies]
capture-linux = { path = "../capture-linux" }
