[package]
name = "input-hooks"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
lazy_static = "1.4"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
]

