[package]
name = "otf-compositor"
version = "0.1.0"
edition = "2024"

[dependencies]
compositor-core = { path = "../compositor-core" }
otf-camera = { path = "../otf-camera" }
capture-core = { path = "../capture-core" }
input-hooks = { path = "../input-hooks" }
crossbeam-channel = "0.5"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
